--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,15 +1,15 @@
-.content {
-    margin: 8px auto;
-    width: 1152px;
-    padding: 20px;
-    min-height: 500px;
-}
-
 .pageStandard {
     margin: 8px auto;
     width: 1152px;
     padding: 20px;
 }
+
+.graph_dep {
+    margin: 8px auto;
+    width: 1152px;
+    padding: 20px;
+}
+
 
 .depAnalyse {
     padding: 64px;
@@ -65,4 +65,25 @@
 }
 .white_dependency {
     padding: 5px 
+}
+.graph-container-scrollable {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-top: 20px;
+}
+
+.graph-wrapper {
+    position: relative;
+    width: 100%;
+    align-items: center;
+   /* max-width: 1200px; /* Optional, to limit graph size */
+    margin-bottom: 20px;
+    padding: 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #f9f9f9;
+    border-radius: 8px;
 }
