--- a/src/style/home.css
+++ b/src/style/home.css
@@ -4,19 +4,22 @@
     padding: 20px;
 }
 
-.graph_dep {
-    margin: 8px auto;
-    width: 1152px;
-    padding: 20px;
-}
-
-
 .depAnalyse {
     padding: 64px;
 }
 
+.pageStandard_graph {
+    margin: 8px auto;
+    width: 90%;
+    padding: 20px;
+}
+
 .startAnalysis_btn {
     text-align: center;
+}
+
+.results-section {
+    padding: 24px;
 }
 
 .graph_dep {
@@ -41,9 +44,11 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
 .space {
     height: 20px;
+}
+.moreSpace { 
+    height: 200px;
 }
 .horizontal_space {
     width: 20px;
@@ -66,24 +71,6 @@
 .white_dependency {
     padding: 5px 
 }
-.graph-container-scrollable {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin-top: 20px;
-}
 
-.graph-wrapper {
-    position: relative;
-    width: 100%;
-    align-items: center;
-   /* max-width: 1200px; /* Optional, to limit graph size */
-    margin-bottom: 20px;
-    padding: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-    border-radius: 8px;
-}
+
+
